# tgit

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml
tgit_cli/: Cargo.toml
tgit_cli/src/: main.rs
tgit_core/: Cargo.toml
tgit_core/src/: compression.rs  diff.rs  errors.rs  lib.rs  remote.rs  storage.rs  utils.rs  validation.rs
tgit_core/tests/: basic_tests.rs  restore_tests.rs
vekt_cli/src/: main.rs
vekt_core/src/: blobs.rs  errors.rs  gc.rs  lib.rs  remote.rs  storage.rs  utils.rs  validation.rs
vekt_core/tests/: error_tests.rs  integration_tests.rs
