[package]
name = "tgit"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Point to the local library folder
tgit_core = { path = "../tgit_core" }

clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"
serde_json = "1.0"
tokio = "1.48.0"
